Refactored API call

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="pokedex-container">
             <ul id="pokedex" class="pokedex-list">
             </ul>
+            <button id="next">Next page</button>
         </div>
     </main>
     
