--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="pokedex-container">
             <ul id="pokedex" class="pokedex-list">
             </ul>
-            <button id="next">Next page</button>
+            <button id="next" class="btn">Next Pokemon</button>
         </div>
     </main>
     
