--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Pokemon Pokedex</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
         </div>
     </main>
     
-    <script src="pokemon.js"></script>
-    <script src="app.js"></script>
+    <script src="assets/js/pokemon.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
