--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 <body>
   <main>
-      <div class="pokedex-container">
-          <ul id="pokedex" class="pokedex-list">
+    <div class="container">
+      <div class="card">
+        <div class="card__body">
+          <div class="pokemon-header">
+                
+          </div>
+          <ul class="pokemon-types">
+                
           </ul>
-          <button id="next" class="btn">Next Pokemon</button>
+        </div>
       </div>
+      <button id="next" class="btn">Next Pokemon</button>
+    </div>
   </main>
   
   <script src="assets/js/pokemon.js"></script>
