--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-    <div class="container">
+    <div class="container bg">
       <div class="card">
         <div class="card__body">
           <div class="pokemon-header">
