--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <title>Pokemon Pokedex</title>
-</head>
-<body>
-  <main>
-    <div class="container bg">
-      <div class="card">
-        <div class="card__body">
-          <div class="pokemon-header">
-                
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <title>Pokemon Pokedex</title>
+  </head>
+  <body>
+    <main>
+      <div class="container bg">
+        <img src="assets/img/pokeball.png" alt="Pokeball" class="pokeball" />
+        <div class="card">
+          <div class="card__body">
+            <div class="pokemon-header"></div>
+            <ul class="pokemon-types"></ul>
           </div>
-          <ul class="pokemon-types">
-                
-          </ul>
         </div>
+        <button id="previous" class="btn btn--previous">
+          Prev
+        </button>
+        <button id="next" class="btn btn--next">Next</button>
       </div>
-      <button id="next" class="btn">Next Pokemon</button>
-    </div>
-  </main>
-  
-  <script src="assets/js/pokemon.js"></script>
-  <script src="assets/js/app.js"></script>
-</body>
+    </main>
+
+    <script src="assets/js/pokemon.js"></script>
+    <script src="assets/js/app.js"></script>
+  </body>
 </html>
